Encrypt CC sensitive data